# wisdom_server

./: .gitignore  CMakeLists.txt  Makefile  child.c  out.txt  server.c  server_protocols.txt
src/: child.c  child.h  sensor_type.h  server.c  ts_printf.c  ts_printf.h  wisdom_inet.h
